Simple bookmark loading and a bit of refactoring

--- a/html/sidebar.html
+++ b/html/sidebar.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Sidebar</title>
-    <link rel="stylesheet" href="../css/reset.css" />
     <link rel="stylesheet" href="../css/sidebar.css" />
+    <link rel="stylesheet" href="../css/tabs.css" />
+    <link rel="stylesheet" href="../css/bookmarks.css" />
   </head>
+
   <body>
-    <h2 class="sideBarHeader">Tabs:</h2>
+    <h2 class="sidebarSectionHeader">Tabs&colon;</h2>
     <div id="tabs"></div>
 
-    <script src="../js/sidebar/sidebar.js"></script>
+    <h2 class="sidebarSectionHeader">Bookmarks</h2>
+    <div id="bookmarks"></div>
+
+    <script src="../js/sidebar/tabs.js"></script>
+    <script src="../js/sidebar/bookmarks.js"></script>
   </body>
 </html>
