Text and CSS fix

--- a/html/sidebar.html
+++ b/html/sidebar.html
@@ -10,7 +10,7 @@
     <h2 class="sidebarSectionHeader">Tabs&colon;</h2>
     <div id="tabs"></div>
 
-    <h2 class="sidebarSectionHeader">Bookmarks</h2>
+    <h2 class="sidebarSectionHeader">Bookmarks: </h2>
     <div id="bookmarks"></div>
 
     <script src="../js/sidebar/tabs.js"></script>
