--- a/html/sidebar.html
+++ b/html/sidebar.html
@@ -7,12 +7,15 @@
   </head>
 
   <body>
-    <h2 class="sidebarSectionHeader">Tabs&colon;</h2>
+    <h2 id="tabsHeader" class="sidebarSectionHeader">Tabs</h2>
     <div id="tabs"></div>
+
+    <hr />
 
     <h2 class="sidebarSectionHeader">Bookmarks: </h2>
     <div id="bookmarks"></div>
 
+    <script src="../js/sidebar/sidebar.js"></script>
     <script src="../js/sidebar/tabs.js"></script>
     <script src="../js/sidebar/bookmarks.js"></script>
   </body>
