Using template for tabs now.

--- a/html/sidebar.html
+++ b/html/sidebar.html
@@ -8,12 +8,22 @@
 
   <body>
     <h2 id="tabsHeader" class="sidebarSectionHeader">Tabs</h2>
-    <div id="tabs"></div>
+    <div id="tabs">
+      
+    </div>
 
-    <hr />
+    <hr width="100" />
 
     <h2 class="sidebarSectionHeader">Bookmarks: </h2>
     <div id="bookmarks"></div>
+
+    <div id="templates">
+      <div class="tab" id="tabTemplate">
+        <img class="tabFavIcon" src="../imgs/icon.512.png" />
+        <span class="tabTitle"></span>
+        <img class="tabCloseIcon" src="../imgs/close.png" />
+      </div>
+    </div>
 
     <script src="../js/sidebar/sidebar.js"></script>
     <script src="../js/sidebar/tabs.js"></script>
