--- a/html/sidebar.html
+++ b/html/sidebar.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
     <link rel="stylesheet" type="text/css" href="../externals/fontisto/fontisto.min.css" />
 
     <link rel="stylesheet" type="text/css" href="../css/sidebar.css" />
@@ -11,30 +9,7 @@
   </head>
 
   <body>
-    <h2 id="tabsHeader" class="sidebarSectionHeader">
-      Tabs
-      <i class="fi fi-plus-a" id="addTab"></i>
-    </h2>
-    <div id="tabs"></div>
 
-    <hr width="100" />
-
-    <h2 class="sidebarSectionHeader">Bookmarks: </h2>
-    <div id="bookmarks"></div>
-
-    <div id="templates">
-      <div class="tab lineItem" id="tabTemplate" draggable="true">
-        <img class="tabFavIcon" src="../imgs/icon.512.png" />
-        <span class="tabTitle lineContent"></span>
-        <div class="tabIcons">
-          <i class="tabIdentity"></i>
-          <i class="fi fi-close-a tabCloseIcon"></i>
-        </div>
-      </div>
-    </div>
-
-    <script type="text/javascript" src="../js/sidebar/sidebar.js"></script>
-    <script type="text/javascript" src="../js/sidebar/tabs.js"></script>
-    <script type="text/javascript" src="../js/sidebar/bookmarks.js"></script>
+    <script type="text/javascript" src="../js/sidebar.js"></script>
   </body>
 </html>
