--- a/html/sidebar.html
+++ b/html/sidebar.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-
+    <div id="sidebar-container"></div>
     <script type="text/javascript" src="../js/sidebar.js"></script>
   </body>
 </html>
